--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -353,8 +353,6 @@ acyclic graph.
 Table~\ref{tbl-terminologylocalconventions} reports our graphical
 conventions.
 
-\newpage{}
-
 \begin{table}
 
 \caption{\label{tbl-terminologylocalconventions}Terminology}
@@ -443,8 +441,6 @@ threatening identification (refer to Richardson and Robins
 Table~\ref{tbl-terminologylocalconventions} reports our graphical
 conventions.
 
-\newpage{}
-
 \begin{table}
 
 \caption{\label{tbl-terminologygeneral}Elements of Causal Graphs}
@@ -492,15 +488,28 @@ Here, we do not imagine any intervention on birthplace.
   religious service or of wealth taken alone.
 \end{enumerate}
 
-Whether considering interaction as effect modification or as a double
-intervention, we must state a scale at which we indent to measure our
-contrasts. This is because evidence of effect-modification or
+When our interest is in a single intervention we will use the terms
+`effect-modification 'and 'moderation' interchangeably. When our focus
+is on a double intervention we will use the term `interaction.' We note
+the term `interaction' has broader scope than the analysis of
+heterogeity of single effects and the analysis of double exposures. For
+example the term `interaction' arises in the analysis of biological
+synergisms. We shall restrict our interests to heterogeneity and double
+interventions.
+
+Note that when considering interaction as effect modification or as a
+double intervention, we must state a scale at which we indent to measure
+our contrasts. This is because evidence of effect-modification or
 interaction that is present at one scale may not be present at another.
 Here, we will restrict our examples to causal contrasts on the additive
 scale.
 
-The key point here is that before writing applying statistical models to
-data, we
+The key point to underscore up front is that before applying statistical
+models to data, we must to explicitly define our causal questions, the
+scale at which it will be computed, and the target population in which
+we are interested. Considering questions of interaction will deepen our
+understanding for the importance of specifying these interests before
+conducting data analysis.
 
 Table~\ref{tbl-terminologyeffectmodification} reviews our graphical
 conventions for describing effect modification.
