--- a/manuscripts/24-jb-dags/24-jb-swigs.qmd
+++ b/manuscripts/24-jb-dags/24-jb-swigs.qmd
@@ -162,7 +162,6 @@ To clarify the concepts of interaction, moderation, and mediation, we will use c
 
 @tbl-terminologylocalconventions reports our graphical conventions.
 
-{{< pagebreak >}}
 ::: {#tbl-terminologylocalconventions}
 ```{=latex}
 \terminologylocalconventions
@@ -202,8 +201,6 @@ Terminology
 @tbl-terminologylocalconventions reports our graphical conventions.
 
 
-
-{{< pagebreak >}}
 ::: {#tbl-terminologygeneral}
 ```{=latex}
 \terminologygeneral
@@ -227,9 +224,13 @@ Here, we do not imagine any intervention on birthplace.
 
 (2) Interaction as the combined effect of a double intervention. We might ask of whether administering two treatments would affect people differently than each taken individually. For exampel, we might ask wehther the combined effect of religious service and wealth affect charitable giving differently from the independent effect of either religious service or of wealth taken alone. 
 
-Whether considering interaction as effect modification or as a double intervention, we must state a scale at which we indent to measure our contrasts. This is because evidence of effect-modification or interaction that is present at one scale may not be present at another. Here, we will restrict our examples to causal contrasts on the additive scale.  
 
-The key point here is that before writing applying statistical models to data, we 
+When our interest is in a single intervention we will use the terms 'effect-modification 'and 'moderation' interchangeably. When our focus is on a double intervention we will use the term 'interaction.'  We note the term 'interaction' has broader scope than the analysis of heterogeity of single effects and the analysis of double exposures.  For example the term 'interaction' arises in the analysis of biological synergisms. We shall restrict our interests to heterogeneity and double interventions. 
+
+Note that when considering interaction as effect modification or as a double intervention, we must state a scale at which we indent to measure our contrasts. This is because evidence of effect-modification or interaction that is present at one scale may not be present at another. Here, we will restrict our examples to causal contrasts on the additive scale.  
+
+
+The key point to underscore up front is that before applying statistical models to data, we must to explicitly define our causal questions, the scale at which it will be computed, and the target population in which we are interested.  Considering questions of interaction will deepen our understanding for the importance of specifying these interests before conducting data analysis. 
 
 
 
