--- a/manuscripts/24-jb-dags/24-jb-swigs.qmd
+++ b/manuscripts/24-jb-dags/24-jb-swigs.qmd
@@ -171,6 +171,7 @@ Terminology
 
 
 ### Elements of causal graphs
+
 **Node**: a node or vertex represents characteristics or features of units within a population on a causal diagram -- that is a "variable." In causal directed acyclic graphs, we draw nodes with respect to the *target population*, which is the population for whom investigators seek causal inferences [@suzuki2020]. Time-indexed node:  $X_t$ denotes relative chronology
 
 **Edge without an Arrow** ($\association$): path of association, we do not assert causality.
@@ -227,10 +228,13 @@ Here, we do not imagine any intervention on birthplace.
 
 When our interest is in a single intervention we will use the terms 'effect-modification 'and 'moderation' interchangeably. When our focus is on a double intervention we will use the term 'interaction.'  We note the term 'interaction' has broader scope than the analysis of heterogeity of single effects and the analysis of double exposures.  For example the term 'interaction' arises in the analysis of biological synergisms. We shall restrict our interests to heterogeneity and double interventions. 
 
-Note that when considering interaction as effect modification or as a double intervention, we must state a scale at which we indent to measure our contrasts. This is because evidence of effect-modification or interaction that is present at one scale may not be present at another. Here, we will restrict our examples to causal contrasts on the additive scale.  
+Note that when considering interaction as effect modification or as a double intervention, we must state a scale at which we indent to measure our contrasts. This is because evidence of effect-modification or of interaction that is present at one scale may not be present at another. Indeed "effect-modification" is often called "effect-measure modification." Here, we will restrict consideration of effect (measure) modification and of interaction to causal contrasts computed on the additive scale.  
+
+The key point to underscore up front is that before applying statistical models to data, we must to explicitly define our causal questions, the scale at which it will be computed, and the target population in which we are interested. We must state whether we are intrested causal contrasts for a single intervention at different levels a covariates (or set of covariates) or whether we are intersted in causal contrasts obtained for different levels of a double intervention.
+Indeed, considering questions of interaction immediately claries the importance of clearly stating our causal questions before conducting data analysis. 
 
 
-The key point to underscore up front is that before applying statistical models to data, we must to explicitly define our causal questions, the scale at which it will be computed, and the target population in which we are interested.  Considering questions of interaction will deepen our understanding for the importance of specifying these interests before conducting data analysis. 
+### Effect-Modification
 
 
 
@@ -241,6 +245,35 @@ The key point to underscore up front is that before applying statistical models 
 \terminologyeffectmodification
 ```
 :::
+
+
+
+It is often scientifically interesting to consider whether treatment effects vary over levels of other variable without imagining a double intervention. We call a variable over which the treatment effect varies, an 'effect-modifier' or an 'effect-measure modifier.' We call the phenomenon of variation in the effect of the exposure over levels of a covariate, 'effect-modification,' or 'effect-measure modification'.  Suppose $A$ is the treatment, $V$ is the modifier, and $Y$ is the outcome.  Effect-modification assesses whether the effect of $A$ on $Y$ is different across levels of $Z$ (i.e., whether the effect of $A$ on $Y$ is different when $Z = Z_1$ compared to when $Z = Z_2$. We do not imagine interventions on $Z$.  For this reason we draw an open arrow from in our causal DAG. (Note this convention is specific to this article, refer to @hernan2024WHATIF pp 126-127 for a discussion of "noncausal" arrows. For @hernan2024WHATIF, '... arrows simply encode, via d-separation, the conditional independencies satisfied by the variables on the diagram and on the associated SWIG.' )
+
+
+
+@fig-dag-effect-modification consider whether effect-modification of $A$ on $Y$ across levels of $G$. Because we are not interested in the causal effect of $G$ as such, but rather, how the effect of $A$ varies across $G$, we would not need to adjust $G$ by $Z$. However, as we shall consider in the next section, the presence and absence of effect-modification may depend on other variables in a causal network, as well as on which other variables investigators condition on in their models. To foreshadow, we suppose that $Z$, a parent of $G$, is an effect-modifier of $A$ on $Y$. Were we to include $Z$ in the model, the effect estimate for $G$ on $Y$ may be attenuated or erased. There is here no clear fact of the matter about whether and how much $G$ is an effect-modifier outside of researcher modelling decisions. I remind readers: *with absolute power comes absolute responsibility.*
+
+To better understand the interest of effect-modification, again consider a study investigating whether beliefs in big Gods affect social complexity. Suppose we compare two distinct geographical groups: North American societies ($G=1$) and Continental societies ($G=2$). Suppose we want to examine the causal effect of changing the exposure from $A = 0$ to $A = 1$ within each group and then compare these effects across the groups. The relevant causal contrasts are given as follows:
+
+1.  **Causal effect within North American societies (**$G=1$):
+    $$\hat{\tau}_{g1} = \hat{\mathbb{E}}[Y(1)|G=1] - \hat{\mathbb{E}}[Y(0)|G=1]$$ 
+    
+Here, $\hat{\tau}_{g1}$ represents the estimated causal effect of changing the exposure from $A = 0$ to $A = 1$ within the North American societies.
+
+2.  **Causal effect within Continental societies (**$G=2$):
+
+    $$\hat{\tau}_{g2} = \hat{\mathbb{E}}[Y(1)|G=2] - \hat{\mathbb{E}}[Y(0)|G=2]$$
+
+    Similarly, $\hat{\tau}_{g2}$ denotes the estimated causal effect for the Continental societies.
+
+3.  **Comparing causal effects across groups**:
+
+    $$\hat{\gamma} = \hat{\tau}_{g1} - \hat{\tau}_{g2}$$ 
+    
+The estimated quantity $\hat{\gamma}$ computes the difference in the causal estimands between the two groups. A nonzero $\hat{\gamma}$ indicates effect-modification, suggesting that the effect of changing the exposure differs between the two groups. If we were to observe that $\hat{\gamma} \neq 0$, this would provide evidence for variability in the effect of the exposure on the outcome in different groups. Note that the causal effect for one group might be indistinguishable from zero, and yet we might nevertheless find evidence for effect-modification if the comparison group exhibits reliably different responses from the contrast group that is indistinguishable from zero.
+
+
 
 
 
