--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -499,17 +499,24 @@ interventions.
 
 Note that when considering interaction as effect modification or as a
 double intervention, we must state a scale at which we indent to measure
-our contrasts. This is because evidence of effect-modification or
+our contrasts. This is because evidence of effect-modification or of
 interaction that is present at one scale may not be present at another.
-Here, we will restrict our examples to causal contrasts on the additive
-scale.
+Indeed ``effect-modification'' is often called ``effect-measure
+modification.'' Here, we will restrict consideration of effect (measure)
+modification and of interaction to causal contrasts computed on the
+additive scale.
 
 The key point to underscore up front is that before applying statistical
 models to data, we must to explicitly define our causal questions, the
 scale at which it will be computed, and the target population in which
-we are interested. Considering questions of interaction will deepen our
-understanding for the importance of specifying these interests before
-conducting data analysis.
+we are interested. We must state whether we are intrested causal
+contrasts for a single intervention at different levels a covariates (or
+set of covariates) or whether we are intersted in causal contrasts
+obtained for different levels of a double intervention. Indeed,
+considering questions of interaction immediately claries the importance
+of clearly stating our causal questions before conducting data analysis.
+
+\subsubsection{Effect-Modification}\label{effect-modification}
 
 Table~\ref{tbl-terminologyeffectmodification} reviews our graphical
 conventions for describing effect modification.
@@ -527,6 +534,88 @@ conventions for describing effect modification.
 }
 
 \end{table}%
+
+It is often scientifically interesting to consider whether treatment
+effects vary over levels of other variable without imagining a double
+intervention. We call a variable over which the treatment effect varies,
+an `effect-modifier' or an `effect-measure modifier.' We call the
+phenomenon of variation in the effect of the exposure over levels of a
+covariate, `effect-modification,' or `effect-measure modification'.
+Suppose \(A\) is the treatment, \(V\) is the modifier, and \(Y\) is the
+outcome. Effect-modification assesses whether the effect of \(A\) on
+\(Y\) is different across levels of \(Z\) (i.e., whether the effect of
+\(A\) on \(Y\) is different when \(Z = Z_1\) compared to when
+\(Z = Z_2\). We do not imagine interventions on \(Z\). For this reason
+we draw an open arrow from in our causal DAG. (Note this convention is
+specific to this article, refer to Hernan and Robins
+(\citeproc{ref-hernan2024WHATIF}{2024}) pp 126-127 for a discussion of
+``noncausal'' arrows. For Hernan and Robins
+(\citeproc{ref-hernan2024WHATIF}{2024}), `\ldots{} arrows simply encode,
+via d-separation, the conditional independencies satisfied by the
+variables on the diagram and on the associated SWIG.' )
+
+\textbf{?@fig-dag-effect-modification} consider whether
+effect-modification of \(A\) on \(Y\) across levels of \(G\). Because we
+are not interested in the causal effect of \(G\) as such, but rather,
+how the effect of \(A\) varies across \(G\), we would not need to adjust
+\(G\) by \(Z\). However, as we shall consider in the next section, the
+presence and absence of effect-modification may depend on other
+variables in a causal network, as well as on which other variables
+investigators condition on in their models. To foreshadow, we suppose
+that \(Z\), a parent of \(G\), is an effect-modifier of \(A\) on \(Y\).
+Were we to include \(Z\) in the model, the effect estimate for \(G\) on
+\(Y\) may be attenuated or erased. There is here no clear fact of the
+matter about whether and how much \(G\) is an effect-modifier outside of
+researcher modelling decisions. I remind readers: \emph{with absolute
+power comes absolute responsibility.}
+
+To better understand the interest of effect-modification, again consider
+a study investigating whether beliefs in big Gods affect social
+complexity. Suppose we compare two distinct geographical groups: North
+American societies (\(G=1\)) and Continental societies (\(G=2\)).
+Suppose we want to examine the causal effect of changing the exposure
+from \(A = 0\) to \(A = 1\) within each group and then compare these
+effects across the groups. The relevant causal contrasts are given as
+follows:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \textbf{Causal effect within North American societies (}\(G=1\)):
+  \[\hat{\tau}_{g1} = \hat{\mathbb{E}}[Y(1)|G=1] - \hat{\mathbb{E}}[Y(0)|G=1]\]
+\end{enumerate}
+
+Here, \(\hat{\tau}_{g1}\) represents the estimated causal effect of
+changing the exposure from \(A = 0\) to \(A = 1\) within the North
+American societies.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  \textbf{Causal effect within Continental societies (}\(G=2\)):
+
+  \[\hat{\tau}_{g2} = \hat{\mathbb{E}}[Y(1)|G=2] - \hat{\mathbb{E}}[Y(0)|G=2]\]
+
+  Similarly, \(\hat{\tau}_{g2}\) denotes the estimated causal effect for
+  the Continental societies.
+\item
+  \textbf{Comparing causal effects across groups}:
+
+  \[\hat{\gamma} = \hat{\tau}_{g1} - \hat{\tau}_{g2}\]
+\end{enumerate}
+
+The estimated quantity \(\hat{\gamma}\) computes the difference in the
+causal estimands between the two groups. A nonzero \(\hat{\gamma}\)
+indicates effect-modification, suggesting that the effect of changing
+the exposure differs between the two groups. If we were to observe that
+\(\hat{\gamma} \neq 0\), this would provide evidence for variability in
+the effect of the exposure on the outcome in different groups. Note that
+the causal effect for one group might be indistinguishable from zero,
+and yet we might nevertheless find evidence for effect-modification if
+the comparison group exhibits reliably different responses from the
+contrast group that is indistinguishable from zero.
 
 Table~\ref{tbl-terminologyeffectmodificationtypes} illustrates the
 dependency of effect modification on other variables included in a model
