--- a/manuscripts/24-jb-dags/24-jb-dags.qmd
+++ b/manuscripts/24-jb-dags/24-jb-dags.qmd
@@ -853,7 +853,7 @@ Common confounding scenarios in which chronology is not enough.
 
 ### 4.6. Treatment Confounder Feedback in Sequential Treatments
 
-@tbl-chronology-notenough $\mathcal{G} 6$ illustrates the threat of treatment confounder feedback in sequntial treatments. Suppose we are interested in whether beliefs in big gods affect social complexity, suppose that beliefs in big gods affect economic trade, and that economic trade may affect beliefs in big gods and social complexity. Suppose the historical record is fragmented such that there are unmeasured variables that affect both trade and social complexity.  Even if these unmeasured variables do not affect the treatment, conditioning on the $L$ a confounder and sequential treatment opens a backdoor path $A \association L \association U \association Y$. We have confounding. 
+@tbl-chronology-notenough $\mathcal{G} 6$ illustrates the threat of treatment confounder feedback in sequential treatment regimes. Suppose we are interested in whether beliefs in big gods affect social complexity, suppose that beliefs in big gods affect economic trade, and that economic trade may affect beliefs in big gods and social complexity. Suppose the historical record is fragmented such that there are unmeasured variables that affect both trade and social complexity.  Even if these unmeasured variables do not affect the treatment, conditioning on the $L$ a confounder and sequential treatment opens a backdoor path $A \association L \association U \association Y$. We have confounding. 
 
  @tbl-chronology-notenough $\mathcal{G} 6$ reveals the difficulty of sequentially estimating causal effects. To estimate an effect requires special estimators, under the assumption of sequential randomisation for fixed treatments, and the assumption of strong sequential randomisation for time-varying treatments -- that is, for treatments whose levels depend on past treatments and confounders (refer to @robins1986; @hernan2004STRUCTURAL; @vanderlaan2011; @vanderlaan2018; @haneuse2013estimation; @young2014identification; @rotnitzky2017multiply; @richardson2013; @diaz2021nonparametric; @williams2021; @hoffman2023).
 
@@ -877,7 +877,7 @@ Common confounding scenarios in which chronology is not enough.
 
 We can compute six causal contrasts for these four fixed regimens, as shown in @tbl-regimens.
 
-A limitation of directed causal diagrams is that we do not project factorisations of the counterfactual contrasts. To evaluate counterfactual identification we may use Single World Intervention Graphs (refer to @robins2010alternative; @richardson2013swigsprimer; @richardson2023potential). These causal graphs are especially helpful if the treatments to be compared are not fixed, but vary as functions of past interventions.  We unfortunately do not have space here to cover single world intervention graphs.
+A limitation of directed acyclic causal diagrams is that we do not project factorisations of the counterfactual contrasts onto the graphs themselves. To evaluate counterfactual identification, it can be helpful to use Single World Intervention Graphs (refer to @robins2010alternative; @richardson2013swigsprimer; @richardson2023potential).
 
 ### 4.7  Collider Stratification Bias in Sequential Treatments
 
