update church manuscript

--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
@@ -729,27 +729,27 @@ We provide comprehensive details of all measures in **Appendix A**.
 
 ### Causal Interventions
 
-We define three targeted causal contrasts (*causal estimands*) as interventions on prespecified modified treatment policies (refer to @haneuse2013estimation; @diaz2021nonparametric; @diaz2023lmtp). Let $A_t$ denote the treatment -- monthly frequency of religious service. There are three time points: $t\in{0,1,2}$, where $t=0$ denotes the baseline wave, $t=1$, the treatment wave, and $t=2$ at the end of the study. $\mathbf{d}(\cdot)$ denotes a modified treatment policy $f_\mathbf{d}$. When a treatment is fixed to a level defined by the modified treatment policy, perhaps contrary to a participant's observed level of treatment, we use the lowercase symbol $a_1$. Here, the functions defined by modified treatment policies $f_\mathbf{d}$ are interventions that fix $A_1$ to $a_1$.
+We define three targeted causal contrasts (*causal estimands*) as interventions on prespecified modified treatment policies (refer to @haneuse2013estimation; @diaz2021nonparametric; @diaz2023lmtp). There are three measurement intervals $k = \{0,1,2\}$. Baseline indicators of the treatment obtained from $k = 0$ are included for confounding control. $A_1$ denotes the natural level of treatment, measured at $k =1$ -- monthly frequency of religious service. Outcomes indicators are obtained from $k=2$ -- the end of the study. $\mathbf{\tilde{g}}(A_i)$ denotes a modified treatment policy, where $A^+_1\mathbf{\tilde{g}}(A_i = a_1)$ where is the level to which $A_i$ is set according to a policy function $\mathbf{\tilde{g}}$. Under modified treatment policies "the natural value of the treatment" may be a confounder, however because we estimate the causal effects of point interventions there is not additional threat of confounding for modified treatment policies in this study.
 
 1. **Regular Religious Service Treatment**: Administer regular religious service attendance to everyone in the adult population. If an individual's religious service attendance is below four times per month, shift to four; otherwise, maintain their current attendance:
 
 $$
-\mathbf{d}^\lambda (a_1) = \begin{cases} 4 & \text{if } a_1 < 4 \\ 
-a_1 & \text{otherwise} \end{cases}
+\mathbf{g}^\lambda (A_i) = \begin{cases} 4 & \text{if } A_i < 4 \\ 
+A_i & \text{otherwise} \end{cases}
 $$
 
 2. **Zero Religious Service Treatment**: Ensure no religious service attendance for everyone in the adult population of New Zealand. If an individual's religious service attendance is greater than zero, shift to zero; otherwise, make no change:
 
 $$
-\mathbf{d}^\phi (a_1) = \begin{cases} 0 & \text{if } a_1 > 0 \\ 
-a_1 & \text{otherwise} \end{cases}
+\mathbf{g}^\phi (A_i) = \begin{cases} 0 & \text{if } A_i > 0 \\ 
+A_i & \text{otherwise} \end{cases}
 $$
 
 3. **Status Quo -- No Treatment**: Apply no treatment. Each expected mean outcome is calculated using each individual's natural (observed) value of religious service attendance.
 
 
 $$
-\mathbf{d}(a_1) = a_1
+\mathbf{g}(A_i) =A_i
 $$
 
 
@@ -759,19 +759,19 @@ From these policies, we compute the following causal contrasts.
 
 **Target Contrast A: 'Regular vs. Zero'**: How do the prosocial effects of a society with regular religious service attendance differ from those of a society with zero religious service attendance?
 
-$$ \text{Regular Religious Service vs. Zero Religious Service} = E[Y(\mathbf{d}^\lambda) - Y(\mathbf{d}^\phi)] $$
+$$ \text{Regular Religious Service vs. Zero Religious Service} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g}^\phi)] $$
 
 This contrast simulates a scientifically interesting hypothetical experiment where we could randomise individuals to either regular religious service or none, assessing the differences in prosociality outcomes measured one year after the intervention.
 
 **Target Contrast B: 'Regular vs. Status Quo'**: How does a society with regular religious service attendance compare to its status quo?
 
-$$ \text{Regular Religious Service vs. No Treatment} = E[Y(\mathbf{d}^\lambda) - Y(\mathbf{d})] $$
+$$ \text{Regular Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g})] $$
 
 This contrast reflects a policy-relevant hypothetical experiment examining the effect of transitioning to regular religious service if one does not already regularly attend, allowing us to quantitatively assess how much a society in which everyone attends would differ from a society in its current state. 
 
 **Target Contrast C: 'Zero vs. Status Quo'**: What are the social consequences for society of zero religious service attendance compared to its status quo?
 
-$$ \text{Zero Religious Service vs. No Treatment} = E[Y(\mathbf{d}^\phi) - Y(\mathbf{d})] $$
+$$ \text{Zero Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\phi) - Y(\mathbf{g})] $$
 
 This contrast investigates the policy implications of eliminating religious services entirely, questioning whether such a shift would meaningfully affect average levels of charitable donations and volunteering.
 
@@ -781,7 +781,7 @@ To consistently estimate a causal effect, investigators must satisfy three assum
 
 1. **Causal consistency:** potential outcomes must correspond with observed outcomes under the treatments in the data. Essentially, we assume potential outcomes do not depend on how the treatment was administered, conditional on measured covariates [@vanderweele2009; @vanderweele2013]. 
 
-2. **Exchangeability**: given observed covariates, we assume treatment assignment is independent of the potential outcomes to be contrasted. In other words, there is "no unmeasured confounding" [@hernan2024WHATIF; @chatton2020].
+2. **Conditional Exchangeability**: given observed covariates, we assume treatment assignment is independent of the potential outcomes to be contrasted. In other words, there is "no unmeasured confounding" [@hernan2024WHATIF; @chatton2020].
 
 3. **Positivity:** every individual must have a non-zero chance of receiving the treatment, regardless of their covariate values @westreich2010. We evaluate this assumption in each study by examining changes in religious service attendance from baseline (NZAVS time 10) to the treatment wave (NZAVS time 11). For further discussion of these assumptions in the context of NZAVS studies, see @bulbulia2023a.
 
@@ -796,14 +796,13 @@ The target population for this study comprises New Zealand residents as represen
 To be included in the analysis of this study, participants needed to meet the following eligibility criteria:
 
 
-
-### Inclusion Criteria
+#### Inclusion Criteria
 
 - Enrolled in the 2018 wave of the New Zealand Attitudes and Values Study (NZAVS time 10).
 - Missing covariate data at baseline was permitted, and the data was subjected to imputation methods to reduce bias. Only information obtained at baseline was used for such imputation (refer to @zhang2023shouldMultipleImputation).
 Participants may have been lost to follow-up the end of study NZAVS time 12 if they met eligibility criteria at NZAVS time 11 (the treatment wave). We adjusted for attrition and non-response using censoring weights, described below.
 
-### Exclusion Criteria
+#### Exclusion Criteria
 
 - Did not answer the religious service attendance question at New Zealand Attitudes and Values Study at time 10 (the baseline wave) and NZAVS time 11 (the treatment wave).
 
@@ -817,7 +816,7 @@ A total of `r n_participants` individuals met these criteria and were included i
 ```{=latex}
 \lmtptablethree
 ```
-This table presents three Single World Intervention Graphs (SWIGs), one for each treatment condition we compare. Note that we obtain robust confounding control by including baseline measures for both the treatments and outcomes (refer to  @vanderweele2020, protocols described in @bulbulia2024PRACTICAL).We recommend using SWIGs because they are more precise and general than standard causal diagrams (refer to @richardson2013swigsprimer).
+This table presents three Single World Intervention Graphs (SWIGs), one for each treatment condition we compare (refer to @richardson2013). For a single point treatment, a modified treatment policy is identified if the treatment is identified (there is no confounding from the Natural Value of the treatment).  We recommend using SWIGs because they are more precise and more general than causal Directed Acyclic Graphs (refer to @richardson2013swigsprimer).
 :::
 
 
