--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
@@ -248,7 +248,7 @@ University of Wellington
       
 
 
-\date{2024-04-22}
+\date{2024-05-22}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -520,16 +520,19 @@ We define three targeted causal contrasts (\emph{causal estimands}) as
 interventions on prespecified modified treatment policies (refer to
 Haneuse and Rotnitzky (\citeproc{ref-haneuse2013estimation}{2013}); Dı́az
 \emph{et al.} (\citeproc{ref-diaz2021nonparametric}{2021}); Díaz
-\emph{et al.} (\citeproc{ref-diaz2023lmtp}{2023})). Let \(A_t\) denote
-the treatment -- monthly frequency of religious service. There are three
-time points: \(t\in{0,1,2}\), where \(t=0\) denotes the baseline wave,
-\(t=1\), the treatment wave, and \(t=2\) at the end of the study.
-\(\mathbf{d}(\cdot)\) denotes a modified treatment policy
-\(f_\mathbf{d}\). When a treatment is fixed to a level defined by the
-modified treatment policy, perhaps contrary to a participant's observed
-level of treatment, we use the lowercase symbol \(a_1\). Here, the
-functions defined by modified treatment policies \(f_\mathbf{d}\) are
-interventions that fix \(A_1\) to \(a_1\).
+\emph{et al.} (\citeproc{ref-diaz2023lmtp}{2023})). There are three
+measurement intervals \(k = \{0,1,2\}\). Baseline indicators of the
+treatment obtained from \(k = 0\) are included for confounding control.
+\(A_1\) denotes the natural level of treatment, measured at \(k =1\) --
+monthly frequency of religious service. Outcomes indicators are obtained
+from \(k=2\) -- the end of the study. \(\mathbf{\tilde{g}}(A_i)\)
+denotes a modified treatment policy, where
+\(A^+_1\mathbf{\tilde{g}}(A_i = a_1)\) where is the level to which
+\(A_i\) is set according to a policy function \(\mathbf{\tilde{g}}\).
+Under modified treatment policies ``the natural value of the treatment''
+may be a confounder, however because we estimate the causal effects of
+point interventions there is not additional threat of confounding for
+modified treatment policies in this study.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -542,8 +545,8 @@ interventions that fix \(A_1\) to \(a_1\).
 \end{enumerate}
 
 \[
-\mathbf{d}^\lambda (a_1) = \begin{cases} 4 & \text{if } a_1 < 4 \\ 
-a_1 & \text{otherwise} \end{cases}
+\mathbf{g}^\lambda (A_i) = \begin{cases} 4 & \text{if } A_i < 4 \\ 
+A_i & \text{otherwise} \end{cases}
 \]
 
 \begin{enumerate}
@@ -558,8 +561,8 @@ a_1 & \text{otherwise} \end{cases}
 \end{enumerate}
 
 \[
-\mathbf{d}^\phi (a_1) = \begin{cases} 0 & \text{if } a_1 > 0 \\ 
-a_1 & \text{otherwise} \end{cases}
+\mathbf{g}^\phi (A_i) = \begin{cases} 0 & \text{if } A_i > 0 \\ 
+A_i & \text{otherwise} \end{cases}
 \]
 
 \begin{enumerate}
@@ -573,7 +576,7 @@ a_1 & \text{otherwise} \end{cases}
 \end{enumerate}
 
 \[
-\mathbf{d}(a_1) = a_1
+\mathbf{g}(A_i) =A_i
 \]
 
 \subsubsection{Causal Contrasts}\label{causal-contrasts}
@@ -584,7 +587,7 @@ From these policies, we compute the following causal contrasts.
 effects of a society with regular religious service attendance differ
 from those of a society with zero religious service attendance?
 
-\[ \text{Regular Religious Service vs. Zero Religious Service} = E[Y(\mathbf{d}^\lambda) - Y(\mathbf{d}^\phi)] \]
+\[ \text{Regular Religious Service vs. Zero Religious Service} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g}^\phi)] \]
 
 This contrast simulates a scientifically interesting hypothetical
 experiment where we could randomise individuals to either regular
@@ -594,7 +597,7 @@ outcomes measured one year after the intervention.
 \textbf{Target Contrast B: `Regular vs.~Status Quo'}: How does a society
 with regular religious service attendance compare to its status quo?
 
-\[ \text{Regular Religious Service vs. No Treatment} = E[Y(\mathbf{d}^\lambda) - Y(\mathbf{d})] \]
+\[ \text{Regular Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g})] \]
 
 This contrast reflects a policy-relevant hypothetical experiment
 examining the effect of transitioning to regular religious service if
@@ -606,7 +609,7 @@ society in its current state.
 consequences for society of zero religious service attendance compared
 to its status quo?
 
-\[ \text{Zero Religious Service vs. No Treatment} = E[Y(\mathbf{d}^\phi) - Y(\mathbf{d})] \]
+\[ \text{Zero Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\phi) - Y(\mathbf{g})] \]
 
 This contrast investigates the policy implications of eliminating
 religious services entirely, questioning whether such a shift would
@@ -629,10 +632,10 @@ three assumptions:
   (\citeproc{ref-vanderweele2009}{VanderWeele 2009};
   \citeproc{ref-vanderweele2013}{VanderWeele and Hernan 2013}).
 \item
-  \textbf{Exchangeability}: given observed covariates, we assume
-  treatment assignment is independent of the potential outcomes to be
-  contrasted. In other words, there is ``no unmeasured confounding''
-  (\citeproc{ref-chatton2020}{Chatton \emph{et al.} 2020};
+  \textbf{Conditional Exchangeability}: given observed covariates, we
+  assume treatment assignment is independent of the potential outcomes
+  to be contrasted. In other words, there is ``no unmeasured
+  confounding'' (\citeproc{ref-chatton2020}{Chatton \emph{et al.} 2020};
   \citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}).
 \item
   \textbf{Positivity:} every individual must have a non-zero chance of
@@ -672,7 +675,7 @@ protocols stated in Bulbulia
 To be included in the analysis of this study, participants needed to
 meet the following eligibility criteria:
 
-\subsubsection{Inclusion Criteria}\label{inclusion-criteria}
+\paragraph{Inclusion Criteria}\label{inclusion-criteria}
 
 \begin{itemize}
 \tightlist
@@ -691,7 +694,7 @@ meet the following eligibility criteria:
   censoring weights, described below.
 \end{itemize}
 
-\subsubsection{Exclusion Criteria}\label{exclusion-criteria}
+\paragraph{Exclusion Criteria}\label{exclusion-criteria}
 
 \begin{itemize}
 \tightlist
@@ -709,15 +712,14 @@ the study.
 \begin{table}
 
 \caption{\label{tbl-02}This table presents three Single World
-Intervention Graphs (SWIGs), one for each treatment condition we
-compare. Note that we obtain robust confounding control by including
-baseline measures for both the treatments and outcomes (refer to
-VanderWeele \emph{et al.} (\citeproc{ref-vanderweele2020}{2020}),
-protocols described in Bulbulia
-(\citeproc{ref-bulbulia2024PRACTICAL}{2024a})).We recommend using SWIGs
-because they are more precise and general than standard causal diagrams
-(refer to Richardson and Robins
-(\citeproc{ref-richardson2013swigsprimer}{2013})).}
+Intervention Graphs (SWIGs), one for each treatment condition we compare
+(refer to Richardson and Robins (\citeproc{ref-richardson2013}{2013a})).
+For a single point treatment, a modified treatment policy is identified
+if the treatment is identified (there is no confounding from the Natural
+Value of the treatment). We recommend using SWIGs because they are more
+precise and more general than causal Directed Acyclic Graphs (refer to
+Richardson and Robins
+(\citeproc{ref-richardson2013swigsprimer}{2013b})).}
 
 \centering{
 
@@ -730,7 +732,7 @@ because they are more precise and general than standard causal diagrams
 Table~\ref{tbl-02} presents three Single World Intervention Graphs
 (SWIGs) that describe our confounding control (identification strategy)
 (\citeproc{ref-richardson2023nested}{Richardson \emph{et al.} 2023};
-\citeproc{ref-richardson2013swigsprimer}{Richardson and Robins 2013},
+\citeproc{ref-richardson2013swigsprimer}{Richardson and Robins 2013b},
 \citeproc{ref-richardson2023potential}{2023};
 \citeproc{ref-robins2010alternative}{Robins and Richardson 2010};
 \citeproc{ref-shpitser2022multivariate}{Shpitser \emph{et al.} 2022};
@@ -740,7 +742,7 @@ all functions estimated in this study. Unlike standard causal diagrams,
 SWIGs allow us to \emph{separately} read the factorisation of the
 conditional dependencies for the distribution of each set of
 counterfactual outcomes under each modified treatment policy
-(\citeproc{ref-richardson2013swigsprimer}{Richardson and Robins 2013}).
+(\citeproc{ref-richardson2013swigsprimer}{Richardson and Robins 2013b}).
 Note, that the natural value of the treatment \(A\) is obtained both
 from its observed instances and from baseline historical data, including
 the baseline treatment. This method ensures that our analysis accurately
@@ -3289,8 +3291,12 @@ Richardson, TS, Evans, RJ, Robins, JM, and Shpitser, I (2023) Nested
 {M}arkov properties for acyclic directed mixed graphs. \emph{The Annals
 of Statistics}, \textbf{51}(1), 334--361.
 
+\bibitem[\citeproctext]{ref-richardson2013}
+Richardson, TS, and Robins, JM (2013a) Single world intervention graphs:
+A primer. In, Citeseer.
+
 \bibitem[\citeproctext]{ref-richardson2013swigsprimer}
-Richardson, TS, and Robins, JM (2013) Single world intervention graphs:
+Richardson, TS, and Robins, JM (2013b) Single world intervention graphs:
 A primer. In \emph{Second UAI workshop on causal structure learning,
 {B}ellevue, {W}ashington}, Citeseer. Retrieved from
 \url{https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=07bbcb458109d2663acc0d098e8913892389a2a7}
